# Ochuko-careers-website

./: .breakpoints  LICENSE  README.md  app.py  pyproject.toml
templates/: footer.html  home.html  job_item.html  nav.html
